--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </li>
         <li>
           <a
-            href="https://www.tiktok.com/@realdreamshake?lang=en&irclickid=V1J05kRTZxyNT4BTy33WSUXYUkF0c2yvPWlXxs0&irgwc=1&attr_source=impact&attr_medium=affiliate-ad&attr_ad_id=1424839&attr_adgroup_id=1310690&ad_group_name=Admitad%20-%201310690"
+            href="https://www.tiktok.com/@realdreamshake"
             ><i class="fa-brands fa-tiktok"></i
           ></a>
         </li>
